--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="tel:+110001111111">+11 (000) 111-11-11</a>
       </address>
       <img
-        src="/images/Dark-bg.jpg"
+        src="./images/Dark-bg.jpg"
         alt="hero imege"
         width="1440"
         height="600"
