--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <ul>
           <li>
             <img
-              src="/images/Rectangle71_1.jpg"
+              src="./images/Rectangle71_1.jpg"
               alt="Rectangle"
               width="360"
               height="300"
@@ -76,7 +76,7 @@
           </li>
           <li>
             <img
-              src="/images/Rectangle71_2.jpg"
+              src="./images/Rectangle71_2.jpg"
               alt="Rectangle"
               width="360"
               height="300"
@@ -84,7 +84,7 @@
           </li>
           <li>
             <img
-              src="/images/Rectangle71_3.jpg"
+              src="./images/Rectangle71_3.jpg"
               alt="Rectangle"
               width="360"
               height="300"
@@ -97,7 +97,7 @@
         <ul>
           <li>
             <img
-              src="/images/img_Mark_Guerrero.jpg"
+              src="./images/img_Mark_Guerrero.jpg"
               alt="photo Mark Guerrero"
               width="264"
               height="260"
@@ -129,7 +129,7 @@
           </li>
           <li>
             <img
-              src="/images/img_Tom_Ford.jpg"
+              src="./images/img_Tom_Ford.jpg"
               alt="photo Tom Ford"
               width="264"
               height="260"
@@ -161,7 +161,7 @@
           </li>
           <li>
             <img
-              src="/images/img_Camila_Garcia.jpg"
+              src="./images/img_Camila_Garcia.jpg"
               alt="photo Camila Garcia"
               width="264"
               height="260"
@@ -193,7 +193,7 @@
           </li>
           <li>
             <img
-              src="/images/img_Daniel_Wilson.jpg"
+              src="./images/img_Daniel_Wilson.jpg"
               alt="photo Daniel Wilson"
               width="264"
               height="260"
@@ -233,7 +233,7 @@
         marketing & growth solutions.
       </p>
       <img
-        src="/images/Dark-bg-footer.jpg"
+        src="./images/Dark-bg-footer.jpg"
         alt="Dark background"
         width="1440"
         height="310"
