--- a/index.html
+++ b/index.html
@@ -15,110 +15,229 @@
           <li>Portfolio</li>
           <li>Contacts</li>
         </ul>
-        <address>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
-          </nav>
-        </address>
-        <img src="/images/Dark-bg.jpg" alt="hero imege" width="1440" height="600">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      </nav>
+      <address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      </address>
+      <img
+        src="/images/Dark-bg.jpg"
+        alt="hero imege"
+        width="1440"
+        height="600"
+      />
+      <h1>Effective Solutions for Your Business</h1>
+      <button type="button">Order Service</button>
     </header>
     <main>
-        <section>
+      <section>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="/images/Rectangle71_1.jpg"
+              alt="Rectangle"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="/images/Rectangle71_2.jpg"
+              alt="Rectangle"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="/images/Rectangle71_3.jpg"
+              alt="Rectangle"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="/images/img_Mark_Guerrero.jpg"
+              alt="photo Mark Guerrero"
+              width="264"
+              height="260"
+            />
+            <h2>Mark Guerrero</h2>
+            <p>Product Designer</p>
             <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
-                </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                </li>
-                <li>Diligence</li>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                </li>
+              <li>
+                <a href="#">
+                  <img src="#" alt="Instagram" width="16" height="16"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="#" alt="Twitter" width="16" height="16"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="#" alt="Facebook" width="16" height="16"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="#" alt="linkedin" width="16" height="16"
+                /></a>
+              </li>
             </ul>
-        </section>
-        <section>
-            <h2>What are we doing</h2>
+          </li>
+          <li>
+            <img
+              src="/images/img_Tom_Ford.jpg"
+              alt="photo Tom Ford"
+              width="264"
+              height="260"
+            />
+            <h2>Tom Ford</h2>
+            <p>Frontend Developer</p>
             <ul>
-                <li>
-                    <img src="/images/Rectangle71_1.jpg" alt="Rectangle" width="360" height="300">
-                </li>
-                <li>
-                    <img src="/images/Rectangle71_2.jpg" alt="Rectangle" width="360" height="300">
-                </li>
-                <li>
-                    <img src="/images/Rectangle71_3.jpg" alt="Rectangle" width="360" height="300">
-                </li>
+              <li>
+                <a href="#">
+                  <img src="#" alt="Instagram" width="16" height="16"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="#" alt="Twitter" width="16" height="16"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="#" alt="Facebook" width="16" height="16"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="#" alt="linkedin" width="16" height="16"
+                /></a>
+              </li>
             </ul>
-        </section>
-        <section>
-            <h2>Our Team</h2>
+          </li>
+          <li>
+            <img
+              src="/images/img_Camila_Garcia.jpg"
+              alt="photo Camila Garcia"
+              width="264"
+              height="260"
+            />
+            <h2>Camila Garcia</h2>
+            <p>Marketing</p>
             <ul>
-                <li>
-                   <img src="/images/img_Mark_Guerrero.jpg" alt="photo Mark Guerrero" width="264" height="260">
-                   <h2>Mark Guerrero</h2>
-                   <p>Product Designer</p>
-                   <ul>
-                        <li>
-                            <li><a href=""> <img src="" alt="Instagram" width="16" height="16"></a></li>
-                            <li><a href=""> <img src="" alt="Twitter" width="16" height="16"></a></li>
-                            <li><a href=""> <img src="" alt="Facebook" width="16" height="16"></a></li>
-                            <li><a href=""> <img src="" alt="linkedin" width="16" height="16"></a></li>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <img src="/images/img_Tom_Ford.jpg" alt="photo Tom Ford" width="264" height="260">
-                    <h2>Tom Ford</h2>
-                    <p>Frontend Developer</p>
-                    <ul>
-                        <li>
-                            <li><a href=""> <img src="" alt="Instagram" width="16" height="16"></a></li>
-                            <li><a href=""> <img src="" alt="Twitter" width="16" height="16"></a></li>
-                            <li><a href=""> <img src="" alt="Facebook" width="16" height="16"></a></li>
-                            <li><a href=""> <img src="" alt="linkedin" width="16" height="16"></a></li>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                   <img src="/images/img_Camila_Garcia.jpg" alt="photo Camila Garcia" width="264" height="260">
-                   <h2>Camila Garcia</h2>
-                   <p>Marketing</p>
-                   <ul>
-                        <li>
-                            <li><a href=""> <img src="" alt="Instagram" width="16" height="16"></a></li>
-                            <li><a href=""> <img src="" alt="Twitter" width="16" height="16"></a></li>
-                            <li><a href=""> <img src="" alt="Facebook" width="16" height="16"></a></li>
-                            <li><a href=""> <img src="" alt="linkedin" width="16" height="16"></a></li>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <img src="/images/img_Daniel_Wilson.jpg" alt="photo Daniel Wilson" width="264" height="260">
-                    <h2>Daniel Wilson</h2>
-                    <p>UI Designer</p>
-                    <ul>
-                        <li>
-                            <li><a href=""> <img src="" alt="Instagram" width="16" height="16"></a></li>
-                            <li><a href=""> <img src="" alt="Twitter" width="16" height="16"></a></li>
-                            <li><a href=""> <img src="" alt="Facebook" width="16" height="16"></a></li>
-                            <li><a href=""> <img src="" alt="linkedin" width="16" height="16"></a></li>
-                        </li>
-                    </ul>
-                </li>
+              <li>
+                <a href="#">
+                  <img src="#" alt="Instagram" width="16" height="16"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="#" alt="Twitter" width="16" height="16"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="#" alt="Facebook" width="16" height="16"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="#" alt="linkedin" width="16" height="16"
+                /></a>
+              </li>
             </ul>
-        </section>
+          </li>
+          <li>
+            <img
+              src="/images/img_Daniel_Wilson.jpg"
+              alt="photo Daniel Wilson"
+              width="264"
+              height="260"
+            />
+            <h2>Daniel Wilson</h2>
+            <p>UI Designer</p>
+            <ul>
+              <li>
+                <a href="#">
+                  <img src="#" alt="Instagram" width="16" height="16"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="#" alt="Twitter" width="16" height="16"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="#" alt="Facebook" width="16" height="16"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="#" alt="linkedin" width="16" height="16"
+                /></a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
-        <a href="/"><span>WEB</span><span>STUDIO</span></a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        <img src="/images/Dark-bg-footer.jpg" alt="Dark background" width="1440" height="310">
+      <a href="/"><span>WEB</span><span>STUDIO</span></a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+      <img
+        src="/images/Dark-bg-footer.jpg"
+        alt="Dark background"
+        width="1440"
+        height="310"
+      />
     </footer>
   </body>
 </html>
