--- a/index.html
+++ b/index.html
@@ -4,32 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Studio</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
-      <a href="/"><span>WEB</span><span>STUDIO</span></a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li>Studio</li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
+          <li><a href="#">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+110001111111">+11 (000) 111-11-11</a>
       </address>
-      <img
-        src="/images/Dark-bg.jpg"
-        alt="hero imege"
-        width="1440"
-        height="600"
-      />
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
     </header>
     <main>
+      <section>
+        <img
+          src="./images/Dark-bg.jpg"
+          alt="hero imege"
+          width="1440"
+          height="600"
+        />
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
       <section>
         <ul>
           <li>
@@ -53,7 +55,6 @@
               growth opportunities and minimize risk.
             </p>
           </li>
-
           <li>
             <h3>Technologies</h3>
             <p>
@@ -68,7 +69,7 @@
         <ul>
           <li>
             <img
-              src="/images/Rectangle71_1.jpg"
+              src="./images/Rectangle71_1.jpg"
               alt="Rectangle"
               width="360"
               height="300"
@@ -76,7 +77,7 @@
           </li>
           <li>
             <img
-              src="/images/Rectangle71_2.jpg"
+              src="./images/Rectangle71_2.jpg"
               alt="Rectangle"
               width="360"
               height="300"
@@ -84,7 +85,7 @@
           </li>
           <li>
             <img
-              src="/images/Rectangle71_3.jpg"
+              src="./images/Rectangle71_3.jpg"
               alt="Rectangle"
               width="360"
               height="300"
@@ -97,12 +98,12 @@
         <ul>
           <li>
             <img
-              src="/images/img_Mark_Guerrero.jpg"
+              src="./images/img_Mark_Guerrero.jpg"
               alt="photo Mark Guerrero"
               width="264"
               height="260"
             />
-            <h2>Mark Guerrero</h2>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
             <ul>
               <li>
@@ -129,12 +130,12 @@
           </li>
           <li>
             <img
-              src="/images/img_Tom_Ford.jpg"
+              src="./images/img_Tom_Ford.jpg"
               alt="photo Tom Ford"
               width="264"
               height="260"
             />
-            <h2>Tom Ford</h2>
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
             <ul>
               <li>
@@ -161,12 +162,12 @@
           </li>
           <li>
             <img
-              src="/images/img_Camila_Garcia.jpg"
+              src="./images/img_Camila_Garcia.jpg"
               alt="photo Camila Garcia"
               width="264"
               height="260"
             />
-            <h2>Camila Garcia</h2>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
             <ul>
               <li>
@@ -193,12 +194,12 @@
           </li>
           <li>
             <img
-              src="/images/img_Daniel_Wilson.jpg"
+              src="./images/img_Daniel_Wilson.jpg"
               alt="photo Daniel Wilson"
               width="264"
               height="260"
             />
-            <h2>Daniel Wilson</h2>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
             <ul>
               <li>
@@ -227,13 +228,13 @@
       </section>
     </main>
     <footer>
-      <a href="/"><span>WEB</span><span>STUDIO</span></a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
       <img
-        src="/images/Dark-bg-footer.jpg"
+        src="./images/Dark-bg-footer.jpg"
         alt="Dark background"
         width="1440"
         height="310"
