--- a/index.html
+++ b/index.html
@@ -11,28 +11,25 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
+        <address>
+          <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          </ul>
+        </address>
       </nav>
-      <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-      </address>
     </header>
     <main>
       <section>
-        <img
-          src="./images/Dark-bg.jpg"
-          alt="hero imege"
-          width="1440"
-          height="600"
-        />
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>Features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -107,23 +104,23 @@
             <p>Product Designer</p>
             <ul>
               <li>
-                <a href="#">
-                  <img src="#" alt="Instagram" width="16" height="16"
+                <a href="">
+                  <img src="" alt="Instagram" width="16" height="16"
                 /></a>
               </li>
               <li>
-                <a href="#">
-                  <img src="#" alt="Twitter" width="16" height="16"
+                <a href="">
+                  <img src="" alt="Twitter" width="16" height="16"
                 /></a>
               </li>
               <li>
-                <a href="#">
-                  <img src="#" alt="Facebook" width="16" height="16"
+                <a href="">
+                  <img src="" alt="Facebook" width="16" height="16"
                 /></a>
               </li>
               <li>
-                <a href="#">
-                  <img src="#" alt="linkedin" width="16" height="16"
+                <a href="">
+                  <img src="" alt="linkedin" width="16" height="16"
                 /></a>
               </li>
             </ul>
@@ -139,23 +136,23 @@
             <p>Frontend Developer</p>
             <ul>
               <li>
-                <a href="#">
-                  <img src="#" alt="Instagram" width="16" height="16"
+                <a href="">
+                  <img src="" alt="Instagram" width="16" height="16"
                 /></a>
               </li>
               <li>
-                <a href="#">
-                  <img src="#" alt="Twitter" width="16" height="16"
+                <a href="">
+                  <img src="" alt="Twitter" width="16" height="16"
                 /></a>
               </li>
               <li>
-                <a href="#">
-                  <img src="#" alt="Facebook" width="16" height="16"
+                <a href="">
+                  <img src="" alt="Facebook" width="16" height="16"
                 /></a>
               </li>
               <li>
-                <a href="#">
-                  <img src="#" alt="linkedin" width="16" height="16"
+                <a href="">
+                  <img src="" alt="linkedin" width="16" height="16"
                 /></a>
               </li>
             </ul>
@@ -171,23 +168,23 @@
             <p>Marketing</p>
             <ul>
               <li>
-                <a href="#">
-                  <img src="#" alt="Instagram" width="16" height="16"
+                <a href="">
+                  <img src="" alt="Instagram" width="16" height="16"
                 /></a>
               </li>
               <li>
-                <a href="#">
-                  <img src="#" alt="Twitter" width="16" height="16"
+                <a href="">
+                  <img src="" alt="Twitter" width="16" height="16"
                 /></a>
               </li>
               <li>
-                <a href="#">
-                  <img src="#" alt="Facebook" width="16" height="16"
+                <a href="">
+                  <img src="" alt="Facebook" width="16" height="16"
                 /></a>
               </li>
               <li>
-                <a href="#">
-                  <img src="#" alt="linkedin" width="16" height="16"
+                <a href="">
+                  <img src="" alt="linkedin" width="16" height="16"
                 /></a>
               </li>
             </ul>
@@ -203,23 +200,23 @@
             <p>UI Designer</p>
             <ul>
               <li>
-                <a href="#">
-                  <img src="#" alt="Instagram" width="16" height="16"
+                <a href="">
+                  <img src="" alt="Instagram" width="16" height="16"
                 /></a>
               </li>
               <li>
-                <a href="#">
-                  <img src="#" alt="Twitter" width="16" height="16"
+                <a href="">
+                  <img src="" alt="Twitter" width="16" height="16"
                 /></a>
               </li>
               <li>
-                <a href="#">
-                  <img src="#" alt="Facebook" width="16" height="16"
+                <a href="">
+                  <img src="" alt="Facebook" width="16" height="16"
                 /></a>
               </li>
               <li>
-                <a href="#">
-                  <img src="#" alt="linkedin" width="16" height="16"
+                <a href="">
+                  <img src="" alt="linkedin" width="16" height="16"
                 /></a>
               </li>
             </ul>
