--- a/index.html
+++ b/index.html
@@ -105,22 +105,22 @@
             <ul>
               <li>
                 <a href="">
-                  <img src="" alt="Instagram" width="16" height="16"
+                  <img src="#" alt="Instagram" width="16" height="16"
                 /></a>
               </li>
               <li>
                 <a href="">
-                  <img src="" alt="Twitter" width="16" height="16"
+                  <img src="#" alt="Twitter" width="16" height="16"
                 /></a>
               </li>
               <li>
                 <a href="">
-                  <img src="" alt="Facebook" width="16" height="16"
+                  <img src="#" alt="Facebook" width="16" height="16"
                 /></a>
               </li>
               <li>
                 <a href="">
-                  <img src="" alt="linkedin" width="16" height="16"
+                  <img src="#" alt="linkedin" width="16" height="16"
                 /></a>
               </li>
             </ul>
@@ -137,22 +137,22 @@
             <ul>
               <li>
                 <a href="">
-                  <img src="" alt="Instagram" width="16" height="16"
+                  <img src="#" alt="Instagram" width="16" height="16"
                 /></a>
               </li>
               <li>
                 <a href="">
-                  <img src="" alt="Twitter" width="16" height="16"
+                  <img src="#" alt="Twitter" width="16" height="16"
                 /></a>
               </li>
               <li>
                 <a href="">
-                  <img src="" alt="Facebook" width="16" height="16"
+                  <img src="#" alt="Facebook" width="16" height="16"
                 /></a>
               </li>
               <li>
                 <a href="">
-                  <img src="" alt="linkedin" width="16" height="16"
+                  <img src="#" alt="linkedin" width="16" height="16"
                 /></a>
               </li>
             </ul>
@@ -169,22 +169,22 @@
             <ul>
               <li>
                 <a href="">
-                  <img src="" alt="Instagram" width="16" height="16"
+                  <img src="#" alt="Instagram" width="16" height="16"
                 /></a>
               </li>
               <li>
                 <a href="">
-                  <img src="" alt="Twitter" width="16" height="16"
+                  <img src="#" alt="Twitter" width="16" height="16"
                 /></a>
               </li>
               <li>
                 <a href="">
-                  <img src="" alt="Facebook" width="16" height="16"
+                  <img src="#" alt="Facebook" width="16" height="16"
                 /></a>
               </li>
               <li>
                 <a href="">
-                  <img src="" alt="linkedin" width="16" height="16"
+                  <img src="#" alt="linkedin" width="16" height="16"
                 /></a>
               </li>
             </ul>
@@ -201,22 +201,22 @@
             <ul>
               <li>
                 <a href="">
-                  <img src="" alt="Instagram" width="16" height="16"
+                  <img src="#" alt="Instagram" width="16" height="16"
                 /></a>
               </li>
               <li>
                 <a href="">
-                  <img src="" alt="Twitter" width="16" height="16"
+                  <img src="#" alt="Twitter" width="16" height="16"
                 /></a>
               </li>
               <li>
                 <a href="">
-                  <img src="" alt="Facebook" width="16" height="16"
+                  <img src="#" alt="Facebook" width="16" height="16"
                 /></a>
               </li>
               <li>
                 <a href="">
-                  <img src="" alt="linkedin" width="16" height="16"
+                  <img src="#" alt="linkedin" width="16" height="16"
                 /></a>
               </li>
             </ul>
@@ -230,12 +230,6 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-      <img
-        src="./images/Dark-bg-footer.jpg"
-        alt="Dark background"
-        width="1440"
-        height="310"
-      />
     </footer>
   </body>
 </html>
